--- a/src/settings.json
+++ b/src/settings.json
@@ -1,12 +1,12 @@
 {
-	"nomerOwner": "62895369318181",
-	"namaowner": "KOLEKSIBOT",
+	"nomerOwner": "6285876531805",
+	"namaowner": "AnjsGamteng",
 	"zixi": "zixi",
-	"namabot": "⛩️͢⼜KOLEKSIBOT 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
-	"fakee": "6285763816560",
-	"namaowner": "KOLEKSIBOT",
-	"namadua": "KOLEKSIBOT",
-	"namatiga": "BOTz",
+	"namabot": "⛩️͢⼜Butuh Bantuan? 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
+	"fakee": "6285876531805",
+	"namaowner": "AnjsGamteng",
+	"namadua": "Admin Cheap HDI",
+	"namatiga": "AnjsOffc",
 	"ZeksApi": "apivinz",
 	"lolkey": "78bd89cd7b4d6205e3e18061",
 	"dappakey" : "Itsrojako",
